- Fix the error with checkSOLAR() on Windows and Linux 	Not a good fix though